--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <body>
     12312
   <div id="root"></div>
-  <script src="/dist/compiled.js"></script></body>
+  <script src="dist/compiled.js"></script></body>
 </html>
